--- a/public/modules/index.html
+++ b/public/modules/index.html
@@ -30,7 +30,7 @@
 
         <script src="/public/lib/angular/angular.min.js"></script>
         <script src="/public/lib/angular/angular-animate.js"></script>
-        <script src="/public/lib/angular/angular.ui.bootstrap.js"></script>
+        <script src="/public/lib/angular/ui-bootstrap-0.14.3.min.js"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="/public/js/pages/grayscale.js"></script>
