--- a/public/html/popup.html
+++ b/public/html/popup.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="JGJxq3LWhbZYi0e2ozcZWUAhHrqrIE4nrlf3P7ZALYc" />
     <meta name="author" content="">
 
-    <title>CryptoLayer</title>
+    <title>Cyphor</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/public/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Crypto</span>Layer
+                    <i class="fa fa-play-circle"></i>  <span class="light">Cyphor</span> - Cyphor
                 </a>
             </div>
 
