Changes titles to Cyphor

--- a/public/html/popup.html
+++ b/public/html/popup.html
@@ -42,7 +42,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Cyphor</span> - Cyphor
+                    <i class="fa fa-play-circle"></i>  Cyphor
                 </a>
             </div>
 
@@ -79,7 +79,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>Crypto<a>Layer</a></h1>
+                        <h1>Cyphor</h1>
                         <p class="intro-text">A free, cross-platform encryption app to keep your information safe in a world of monitoring.</p>
                             <a href="/public/html/dashboard.html" class="btn btn-circle page-scroll">
                                 <i class="fa fa-lock animated"></i>
