--- a/public/html/popup_old.html
+++ b/public/html/popup_old.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Crypto<a>Layer</a></h1>
+                        <h1 class="brand-heading">Cyphor</h1>
                         <p class="intro-text">A free, cross-platform encryption app to keep your information safe in a world of monitoring.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
